<resources>

    <!-- =================================== -->
    <!-- General / App-wide                  -->
    <!-- =================================== -->
    <string name="app_name">PushupPatrol</string>
    <string name="settings">Settings</string>
    <string name="app_icon">App Icon</string>
    <string name="blocked_app_icon_description">Blocked App Icon</string>


    <!-- =================================== -->
    <!-- Accessibility Service               -->
    <!-- =================================== -->
    <string name="accessibility_service_label">Push-up Patrol Blocker</string>
    <string name="accessibility_service_description">Push-up Patrol needs this permission to detect
        when selected apps are opened, so it can block them if your earned time has run out. This
        helps you stay focused by requiring push-ups to regain access.
    </string>
    <string name="accessibility_service_enabled_text">Accessibility Service Enabled</string>
    <string name="enable_app_blocker_service_text">Enable App Blocker Service</string>
    <string name="btn_enable_accessibility">Enable App Blocker Service</string>


    <!-- =================================== -->
    <!-- Main Activity / Dashboard           -->
    <!-- =================================== -->
    <string name="btn_earn_more_time">EARN MORE TIME</string>
    <string name="btn_select_apps">Select Apps to Lock</string>
    <string name="btn_reset_time">Reset Time</string>


    <!-- =================================== -->
    <!-- App Selection Screen                -->
    <!-- =================================== -->
    <string name="tv_app_selection_title">Select Apps to Lock</string>
    <string name="btn_save_selections">Save Selections</string>
    <string name="btn_save_changes">Save Changes</string>


    <!-- =================================== -->
    <!-- Exercise Activity (Pushup/etc.)     -->
    <!-- =================================== -->
    <string name="tv_guidance_default">Position your upper body in the frame</string>
    <string name="btn_finish"><![CDATA[FINISH & EARN TIME]]></string>
    <string name="btn_close_app">CLOSE APP</string>
    <string name="label_select_activity">Select Activity</string>
    <string name="activity_type_pushups">Push-ups</string>
    <string name="activity_name_pushups">Push-ups</string>
    <string name="activity_name_squats_beta">Squats (Beta)</string>
    <string name="activity_name_squats">Squats (Soon)</string>
    <string name="activity_name_steps">Steps (Soon)</string>
    <string name="unit_name_reps">Reps</string>


    <!-- =================================== -->
    <!-- Interstitial / Blocking Screen      -->
    <!-- =================================== -->
    <string name="interstitial_title_placeholder">Time\'s Up for %s!</string>
    <string name="interstitial_message_time_up">You\'ve run out of time for this app. You can use
        your daily bonus or earn more time.
    </string>
    <string name="interstitial_button_earn_time">Earn More Time</string>
    <string name="interstitial_button_take_break">Take a Break</string>


    <!-- =================================== -->
    <!-- Daily Bonus Feature                 -->
    <!-- =================================== -->
    <string name="interstitial_button_use_bonus_time">Use Daily Bonus (30s)</string>
    <string name="interstitial_button_get_bonus_time">Get %1$ds Bonus Time</string>
    <string name="interstitial_button_get_bonus_time_used">Daily %1$ds Bonus Used</string>
    <string name="bonus_time_activated_toast">Bonus activated for 30 seconds!</string>
    <string name="bonus_time_unavailable_toast">Daily bonus already used.</string>
    <string name="bonus_time_awarded_toast">%1$ds bonus time added to your bank!</string>
    <string name="bonus_time_available_info">Daily bonus available</string>
    <string name="bonus_time_used_info">Daily bonus used for today</string>
    <string name="tv_daily_bonus_info">Daily time bonus available</string>


    <!-- =================================== -->
    <!-- Settings Screen                     -->
    <!-- =================================== -->
    <!-- Time Earning Section -->
    <string name="time_earning">Time Earning</string>
    <string name="seconds_earned_per_push_up">Seconds Earned Per Push-up</string>

    <!-- Daily Bonus Section -->
    <string name="settings_section_daily_bonus_title">Daily Time Bonus</string>
    <string name="settings_enable_daily_bonus_label">Enable Daily Bonus</string>
    <string name="settings_daily_bonus_amount_label">Bonus Amount</string>

    <!-- String Arrays for Settings -->
    <string-array name="daily_bonus_amount_entries_settings">
        <item>30 Seconds</item>
        <item>1 Minute (60s)</item>
        <item>2 Minutes (120s)</item>
        <item>5 Minutes (300s)</item>
    </string-array>
    <string-array name="daily_bonus_amount_values_settings">
        <item>30</item> <!-- Values are in seconds -->
        <item>60</item>
        <item>120</item>
        <item>300</item>
    </string-array>


    <!-- =================================== -->
    <!-- Developer / Debug Buttons           -->
    <!-- =================================== -->
    <string name="btn_dev_add_time">Dev: +10s</string>
    <string name="btn_dev_reset_bonus_period">Dev: Reset Bonus Period</string>

</resources>