<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ui.earning.PushupActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.pushuppatrol.ui.views.PoseOverlayView
        android:id="@+id/poseOverlayView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/previewView"
        app:layout_constraintBottom_toBottomOf="@+id/previewView"
        app:layout_constraintStart_toStartOf="@+id/previewView"
        app:layout_constraintEnd_toEndOf="@+id/previewView" />

    <TextView
        android:id="@+id/tvPushupCount"
        style="@style/OverlayTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:textStyle="bold"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0" />

    <TextView
        android:id="@+id/tvGuidance"
        style="@style/OverlayTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="#80000000"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/tv_guidance_default"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPushupCount"
        app:layout_constraintVertical_bias="0.45"
        tools:visibility="visible" />

    <!-- In res/layout/activity_pushup.xml -->
    <!-- Add this TextView, ideally within a FrameLayout or ConstraintLayout -->
    <!-- that allows it to overlay the PreviewView. -->
    <TextView
        android:id="@+id/tvDebugInfo"
        android:layout_width="305dp"
        android:layout_height="163dp"
        android:background="#80000000"
        android:padding="4dp"
        android:text="Debug Info:"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
        app:layout_constraintEnd_toEndOf="@+id/tvGuidance"
        app:layout_constraintStart_toStartOf="@+id/tvGuidance"
        app:layout_constraintTop_toBottomOf="@+id/tvGuidance" />


    <View
        android:id="@+id/bottom_panel"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="#99000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_finish"
        android:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="@id/bottom_panel"
        app:layout_constraintEnd_toStartOf="@+id/btnCloseApp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottom_panel"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/btnCloseApp"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_close_app"
        android:textColor="@android:color/white"
        app:strokeColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/btnFinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnFinish"
        app:layout_constraintTop_toTopOf="@id/btnFinish" />

</androidx.constraintlayout.widget.ConstraintLayout>